--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>My page</title>
 </head>
-<body>
+<body style="background-color: cadetblue">
 <h1>
   hello , i am a software developer.
 </h1>
