changes on 1/3/2019 hgll

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My page</title>
-</head>
-<body style="background-color: cadetblue">
-<h1>
-  hello , i am a software developer.
-</h1>
-</body>
+    <head>
+        <title>My Page</title>
+    </head>
+    <body style="background-color: cadetblue">
+        <h1 style="text-align: center;color:gray">Registration Form</h1>
+        <form>
+            <table style="border-style: solid;text-align: center">
+                <tr>
+                    <th style="color:yellow">Name :</th><th><input type="text" name="name"></th>
+                </tr>
+                <tr>
+                    <th style="color:yellow">RollNo : </th><th><input type="number" name="roll"></th>
+
+                </tr>
+                <tr>
+                    <th><input type="button" name="n" value="reset"></th><th><input type="submit" value="submit"></th>
+                </tr>
+            </table>
+        </form>
+    </body>
 </html>
